--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -22,7 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.7.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.1",
     "react-widgets": "^5.8.4",
     "web-vitals": "^2.1.4",
