--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "html-webpack-plugin": "^5.6.0",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
     "react-redux": "^8.0.5",
