--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.6",
     "axios": "^1.2.1",
+    "bootstrap": "^5.3.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
